# am-logging

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  deploy_config.json  docker-compose.yml  logging_api_test.postman_collection.json  postman-collection.json  pyproject.toml
.github/workflows/: am-logging.yml  ci-cd.yml
docs/logging/: logging_api_spec.yaml  pattern_definition.yaml
generator/: dart_logger.dart.j2  generate.py  java_logger.java.j2  python_logger.py.j2
helm/: Chart.yaml  values-local.yaml  values.preprod.yaml  values.prod.yaml  values.yaml  vault-mappings.yaml
helm/am-logging/: Chart.yaml  values-local.yaml  values.yaml
helm/am-logging/templates/: common-serviceaccount.yaml  deployment-local.yaml.bak  deployment.yaml  service.yaml
helm/templates/: common-serviceaccount.yaml  deployment.yaml  serviceaccount.yaml
libraries/dart/am-logging-dart/lib/: am_logging.dart
libraries/java/am-logging-java/src/main/java/com/am/logging/: AMLogger.java
libraries/python/am-logging-py/am_logging/: core.py
libraries/python/am-logging-sdk/: am_logging_client.py
scripts/: deploy_local.py  generate_and_sync.py
service/: logging_config.py  main.py  requirements.txt  setup_db.py
